Setup app and routes for each service

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Chat as a reactive framework",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "javaspecs"
   },
   "keywords": [
